[gd_scene load_steps=8 format=3 uid="uid://rx8tiqq4bfua"]

[ext_resource type="Script" path="res://Levels/ConnectGenerator/SpiritConnectGenerator.gd" id="1_xkggy"]
[ext_resource type="TileSet" uid="uid://bctmkf4wdd157" path="res://Resources/world/Pixel Art Top Down - Basic/tileset-prototype.tres" id="3_l3xgy"]
[ext_resource type="PackedScene" uid="uid://mkkyc2ujpxjy" path="res://scripts/ConnectionParticles.tscn" id="4_n7u6l"]
[ext_resource type="PackedScene" uid="uid://coinljyaqicrn" path="res://Characters/player.tscn" id="4_x06kr"]
[ext_resource type="Shader" path="res://scripts/connectionParticles.gdshader" id="5_435ik"]
[ext_resource type="Texture2D" uid="uid://8wj84yxf3j77" path="res://Resources/particles/Basics_particles.png" id="6_0v4f1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mfqg3"]
shader = ExtResource("5_435ik")
shader_parameter/scrolling_speed = 0.8
shader_parameter/opacity = 0.7

[node name="SpiritConnectGenerator" type="Node2D"]
script = ExtResource("1_xkggy")
max_rooms = 90
reconnection_factor = 0.03

[node name="Player" parent="." instance=ExtResource("4_x06kr")]
speed = 0.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.9, 0.9)

[node name="Level" type="TileMap" parent="."]
show_behind_parent = true
tile_set = ExtResource("3_l3xgy")
cell_quadrant_size = 40
format = 2
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = ""
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Rooms" type="Node2D" parent="."]

[node name="ConnectRoute" type="Line2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_mfqg3")
width = 30.0
texture = ExtResource("6_0v4f1")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ConnectionParticles" parent="." instance=ExtResource("4_n7u6l")]

[node name="AspectMap" type="CanvasModulate" parent="."]
visible = false
color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
